AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = MdfParser.vcproj MdfParser.rc

INCLUDES = \
  -I../MdfModel/ \
  -I../../Oem/dbxml/xerces-c-src/src/

lib_LTLIBRARIES = libMgMdfParser.la

libMgMdfParser_la_SOURCES = \
  Common/IOColor.cpp \
  Common/IOExtent3D.cpp \
  Common/IOPoint3D.cpp \
  Common/IOSize2D.cpp \
  Common/IOStringObjectCollection.cpp \
  Common/IOVector3D.cpp \
  PrintLayout/IODataConfiguration.cpp \
  PrintLayout/IOMapView.cpp \
  PrintLayout/IOMapViewportDefinition.cpp \
  PrintLayout/IOPrintLayoutDefinition.cpp \
  PrintLayout/IOPrintLayoutElementCollection.cpp \
  PrintLayout/IOPrintLayoutElementDefinition.cpp \
  PrintLayout/IOPrintLayoutElementStyle.cpp \
  PrintLayout/IOPropertyMappingCollection.cpp \
  PrintLayout/IOStylizationConfiguration.cpp \
  PrintLayout/IOThickness.cpp \
  FSDSAX2Parser.cpp \
  IOAreaRule.cpp \
  IOAreaSymbolization2D.cpp \
  IOAreaTypeStyle.cpp \
  IOAreaUsage.cpp \
  IOAttributeRelate.cpp \
  IOBaseMapDefinition.cpp \
  IOBaseMapLayer.cpp \
  IOBaseMapLayerGroup.cpp \
  IOBlockSymbol.cpp \
  IOCalculatedProperty.cpp \
  IOChannelBand.cpp \
  IOCompositeRule.cpp \
  IOCompositeSymbolization.cpp \
  IOCompositeTypeStyle.cpp \
  IOCompoundSymbolDefinition.cpp \
  IODrawingLayerDefinition.cpp \
  IOElevationSettings.cpp \
  IOExtension.cpp \
  IOExtra.cpp \
  IOFeatureSource.cpp \
  IOFill.cpp \
  IOFontSymbol.cpp \
  IOGraphicElement.cpp \
  IOGraphicElementCollection.cpp \
  IOGridColor.cpp \
  IOGridColorBands.cpp \
  IOGridColorRule.cpp \
  IOGridColorStyle.cpp \
  IOGridLayerDefinition.cpp \
  IOGridScaleRange.cpp \
  IOGridSurfaceStyle.cpp \
  IOHillShade.cpp \
  IOImage.cpp \
  IOImageSymbol.cpp \
  IOLabel.cpp \
  IOLineRule.cpp \
  IOLineSymbolization2D.cpp \
  IOLineTypeStyle.cpp \
  IOLineUsage.cpp \
  IOMapDefinition.cpp \
  IOMapLayer.cpp \
  IOMapLayerCommon.cpp \
  IOMapLayerGroup.cpp \
  IOMapLayerGroupCommon.cpp \
  IOMarkSymbol.cpp \
  IONameStringPair.cpp \
  IOOverride.cpp \
  IOOverrideCollection.cpp \
  IOParameter.cpp \
  IOParameterCollection.cpp \
  IOPath.cpp \
  IOPointRule.cpp \
  IOPointSymbolization2D.cpp \
  IOPointTypeStyle.cpp \
  IOPointUsage.cpp \
  IOProfileRenderLabelsResult.cpp \
  IOProfileRenderLayerResult.cpp \
  IOProfileRenderLayersResult.cpp \
  IOProfileRenderMapResult.cpp \
  IOProfileRenderSelectionResult.cpp \
  IOProfileRenderWatermarkResult.cpp \
  IOProfileRenderWatermarksResult.cpp \
  IOProfileResult.cpp \
  IORelateProperty.cpp \
  IOResizeBox.cpp \
  IOResourceRef.cpp \
  IOScaleRange.cpp \
  IOSimpleSymbol.cpp \
  IOSimpleSymbolDefinition.cpp \
  IOStroke.cpp \
  IOSupplementalSpatialContextInfo.cpp \
  IOSymbol.cpp \
  IOSymbolInstance.cpp \
  IOText.cpp \
  IOTextFrame.cpp \
  IOThemeLabel.cpp \
  IOTileSetDefinition.cpp \
  IOTileSetSource.cpp \
  IOTileStoreParameters.cpp \
  IOTileWatermarkPosition.cpp \
  IOUnknown.cpp \
  IOURLData.cpp \
  IOUtil.cpp \
  IOVectorLayerDefinition.cpp \
  IOVectorScaleRange.cpp \
  IOW2DSymbol.cpp \
  IOWatermarkAppearance.cpp \
  IOWatermarkDefinition.cpp \
  IOWatermarkInstance.cpp \
  IOWatermarkOffsetUnit.cpp \
  IOWatermarkXOffset.cpp \
  IOWatermarkYOffset.cpp \
  IOXYWatermarkPosition.cpp \
  MdfParser.cpp \
  SAX2ElementHandler.cpp \
  SAX2Parser.cpp

noinst_HEADERS = \
  Common/IOColor.h \
  Common/IOExtent3D.h \
  Common/IOPoint3D.h \
  Common/IOSize2D.h \
  Common/IOStringObjectCollection.h \
  Common/IOVector3D.h \
  PrintLayout/IODataConfiguration.h \
  PrintLayout/IOMapView.h \
  PrintLayout/IOMapViewportDefinition.h \
  PrintLayout/IOPrintLayoutDefinition.h \
  PrintLayout/IOPrintLayoutElementCollection.h \
  PrintLayout/IOPrintLayoutElementDefinition.h \
  PrintLayout/IOPrintLayoutElementStyle.h \
  PrintLayout/IOPropertyMappingCollection.h \
  PrintLayout/IOStylizationConfiguration.h \
  PrintLayout/IOThickness.h \
  FSDSAX2Parser.h \
  IOAreaRule.h \
  IOAreaSymbolization2D.h \
  IOAreaTypeStyle.h \
  IOAreaUsage.h \
  IOAttributeRelate.h \
  IOBaseMapDefinition.h \
  IOBaseMapLayer.h \
  IOBaseMapLayerGroup.h \
  IOBlockSymbol.h \
  IOCalculatedProperty.h \
  IOChannelBand.h \
  IOCompositeRule.h \
  IOCompositeSymbolization.h \
  IOCompositeTypeStyle.h \
  IOCompoundSymbolDefinition.h \
  IODrawingLayerDefinition.h \
  IOElevationSettings.h \
  IOExtension.h \
  IOExtra.h \
  IOFeatureSource.h \
  IOFill.h \
  IOFontSymbol.h \
  IOGraphicElement.h \
  IOGraphicElementCollection.h \
  IOGridColor.h \
  IOGridColorRule.h \
  IOGridColorStyle.h \
  IOGridLayerDefinition.h \
  IOGridScaleRange.h \
  IOGridSurfaceStyle.h \
  IOHillShade.h \
  IOImage.h \
  IOImageSymbol.h \
  IOLabel.h \
  IOLineRule.h \
  IOLineSymbolization2D.h \
  IOLineTypeStyle.h \
  IOLineUsage.h \
  IOMapDefinition.h \
  IOMapLayer.h \
  IOMapLayerCommon.h \
  IOMapLayerGroup.h \
  IOMapLayerGroupCommon.h \
  IOMarkSymbol.h \
  IONameStringPair.h \
  IOOverride.h \
  IOOverrideCollection.h \
  IOParameter.h \
  IOParameterCollection.h \
  IOPath.h \
  IOPointRule.h \
  IOPointSymbolization2D.h \
  IOPointTypeStyle.h \
  IOPointUsage.h \
  IOProfileRenderLabelsResult.h \
  IOProfileRenderLayerResult.h \
  IOProfileRenderLayersResult.h \
  IOProfileRenderMapResult.h \
  IOProfileRenderSelectionResult.h \
  IOProfileRenderWatermarkResult.h \
  IOProfileRenderWatermarksResult.h \
  IOProfileResult.h \
  IORelateProperty.h \
  IOResizeBox.h \
  IOResourceRef.h \
  IOScaleRange.h \
  IOSimpleSymbol.h \
  IOSimpleSymbolDefinition.h \
  IOStroke.h \
  IOSupplementalSpatialContextInfo.h \
  IOSymbol.h \
  IOSymbolInstance.h \
  IOText.h \
  IOTextFrame.h \
  IOThemeLabel.h \
  IOTileSetDefinition.h \
  IOTileSetSource.h \
  IOTileStoreParameters.h \
  IOTileWatermarkPosition.h \
  IOUnknown.h \
  IOURLData.h \
  IOUtil.h \
  IOVectorLayerDefinition.h \
  IOVectorScaleRange.h \
  IOW2DSymbol.h \
  IOWatermarkAppearance.h \
  IOWatermarkDefinition.h \
  IOWatermarkInstance.h \
  IOWatermarkOffsetUnit.h \
  IOWatermarkXOffset.h \
  IOWatermarkYOffset.h \
  IOXYWatermarkPosition.h \
  MdfParser.h \
  SAX2ElementHandler.h \
  SAX2Parser.h \
  stdafx.h

libMgMdfParser_la_LIBADD = -lMgMdfModel -lxerces-c

libMgMdfParser_la_LDFLAGS = -release $(PACKAGE_VERSION) \
  -L../MdfModel \
  -L../../Oem/dbxml/install/lib
